Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6478

NativeAddPendingTopicItem prints garbage into log

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Trivial
    • Resolution: Fixed
    • Impala 2.12.0
    • Impala 2.12.0
    • None
    • None
    • ghx-label-9

    Description

      After IMPALA-5990, NativeAddPendingTopicItem keeps printing failure message into Catalogd.INFO though nothing fails. It should be a mistake in the implementation of this function.

      NativeAddPendingTopicItem failed in BE. key=...

      Attachments

        Activity

          People

            tianyiwang Tianyi Wang
            tianyiwang Tianyi Wang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: